# gracile

./: .gitignore  CMakeLists.txt  README.md
code/: app.hpp  definition.hpp  main.cpp
code/components/: component.hpp  def.hpp  graphics.hpp  group.hpp
code/parts/: interpolated.hpp  part.hpp  synth.hpp
code/parts/waveforms/: saw_waveform.hpp  sine_waveform.hpp  waveform.hpp
